--- a/index.html
+++ b/index.html
@@ -1,12 +1,111 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Integrador</title>
+    <title> Integrador</title>
 </head>
+
 <body>
-    
+    <nav>
+        <ul class="">
+            <li><a href="#Inicio">Inicio</a></li>
+            <li><a href="#Consolas">Consolas</a></li>
+            <li><a href="#Juegos">Juegos</a></li>
+            <li><a href="#Contacto">Contacto</a></li>
+        </ul>
+    </nav>
+    <section id="Inicio">
+        <h1>Bienvenido a la Página de Inicio</h1>
+        <p>Las consolas de videojuegos han evolucionado a lo largo de los años, convirtiéndose en una parte fundamental
+            de la industria del entretenimiento. Aquí, podrás explorar la historia de las tres marcas más importantes:
+            PlayStation, Nintendo y Xbox. Cada una ha tenido un impacto significativo en la cultura de los videojuegos y
+            ha dejado una huella imborrable.</p>
+    </section>
+    <section class="Carrusel">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <div class="Botones del Carrusel ">
+            <button id="Anterior" Anterior></button>
+            <button id="Siguiente" Siguiente></button>
+        </div>
+    </section>
+     <!-- Consolas -->
+    <section class="Consola">
+        <!-- PlayStation -->
+        <div class="Tarjeta" id="playstation">
+            <img src="" alt="PlayStation Logo">
+            <h2>PlayStation</h2>
+            <p>La marca PlayStation, lanzada por Sony en 1994.</p>
+            <a href="playstation.html">Explorar PlayStation</a>
+        </div>
+        <!-- Nintendo -->
+        <div class="Tarjeta" id="nintendo">
+            <img src=""
+                alt="Nintendo Logo">
+            <h2>Nintendo</h2>
+            <p>Nintendo es una de las empresas más antiguas en el mundo de los videojuegos. Fundada en 1889, 
+                se destaca por sus juegos de plataforma como mario.</p>
+            <a href="nintendo.html">Explorar Nintendo</a>
+        </div>
+        <!-- Xbox -->
+        <div class="Tarjeta" id="xbox">
+            <img src="" alt="Xbox Logo">
+            <h2>Xbox</h2>
+            <p>Microsoft entró en el mundo de los videojuegos con la Xbox original en 2001.</p>
+            <a href="xbox.html">Explorar Xbox</a>
+        </div>
+    </section>
+     <!-- Juegos-->
+    <section class="Juegos">
+        <h2>Juegos</h2>
+        <p>Informacion sobre los juegos exclusivos de cada consola</p>
+    <!-- Playstation-->
+        <h3 id="PlayJ">Playstation</h3>
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <div></div>
+        <div></div>
+        <div></div>
+         <!-- Xbox -->
+        <h3 id="XboxJ">Xbox</h3>
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <div></div>
+        <div></div>
+        <div></div>
+         <!-- Nintendo -->
+        <h3 id="NintendoJ">Nintendo</h3>
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+
+    </section>
+     <!-- Footer -->
+    </section>
+    <footer class="footer">
+        <div class="Contenedor">
+            <div class="menu-footer">
+                <div class="Info-Contacto">
+                    <p class="Titulo">Información de Contacto</p>
+                    <ul>
+                        <li>Email: htrrodrigo9@gmail.com</li>
+                        <li>Email: santiagolara1242@gmail.com </li>
+                    </ul>
+                        <ul>
+                            <li><a href="#">Consolas</a></li>
+                            <li><a href="#">Juegos</a></li>
+                            <li><a href="#">Inicio</a></li>
+                        </ul>
+                    </div>
+                    <a href="">Registrate</a>
+                </div>
+            </div>
+    </footer>
 </body>
+
 </html>
-<h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam repellat, ab nostrum laudantium nisi asperiores sequi maiores, error ex praesentium earum! Natus earum distinctio praesentium sapiente! Aspernatur, facere ipsam. Totam?</h1>
