--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <nav>
         <ul class="">
-            <li><a href="#Inicio">Inicio</a></li>
-            <li><a href="#Consolas">Consolas</a></li>
-            <li><a href="#Juegos">Juegos</a></li>
-            <li><a href="#Contacto">Contacto</a></li>
+            <li><a href="">Inicio</a></li>
+            <li><a href="">Consolas</a></li>
+            <li><a href="">Juegos</a></li>
+            <li><a href="">Contacto</a></li>
         </ul>
     </nav>
-    <section id="Inicio">
+    <section id="Bienvenida">
         <h1>Bienvenido a la Página de Inicio</h1>
         <p>Las consolas de videojuegos han evolucionado a lo largo de los años, convirtiéndose en una parte fundamental
             de la industria del entretenimiento. Aquí, podrás explorar la historia de las tres marcas más importantes:
@@ -32,60 +32,59 @@
             <button id="Siguiente" Siguiente></button>
         </div>
     </section>
-     <!-- Consolas -->
+    <!-- Consolas -->
     <section class="Consola">
         <!-- PlayStation -->
         <div class="Tarjeta" id="playstation">
             <img src="" alt="PlayStation Logo">
             <h2>PlayStation</h2>
             <p>La marca PlayStation, lanzada por Sony en 1994.</p>
-            <a href="playstation.html">Explorar PlayStation</a>
+            <a href="">Explorar PlayStation</a>
         </div>
         <!-- Nintendo -->
         <div class="Tarjeta" id="nintendo">
-            <img src=""
-                alt="Nintendo Logo">
+            <img src="" alt="Nintendo Logo">
             <h2>Nintendo</h2>
-            <p>Nintendo es una de las empresas más antiguas en el mundo de los videojuegos. Fundada en 1889, 
+            <p>Nintendo es una de las empresas más antiguas en el mundo de los videojuegos. Fundada en 1889,
                 se destaca por sus juegos de plataforma como mario.</p>
-            <a href="nintendo.html">Explorar Nintendo</a>
+            <a href="">Explorar Nintendo</a>
         </div>
         <!-- Xbox -->
         <div class="Tarjeta" id="xbox">
             <img src="" alt="Xbox Logo">
             <h2>Xbox</h2>
             <p>Microsoft entró en el mundo de los videojuegos con la Xbox original en 2001.</p>
-            <a href="xbox.html">Explorar Xbox</a>
+            <a href="">Explorar Xbox</a>
         </div>
     </section>
-     <!-- Juegos-->
+    <!-- Juegos-->
     <section class="Juegos">
         <h2>Juegos</h2>
         <p>Informacion sobre los juegos exclusivos de cada consola</p>
-    <!-- Playstation-->
+        <!-- Playstation-->
         <h3 id="PlayJ">Playstation</h3>
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <div></div>
-        <div></div>
-        <div></div>
-         <!-- Xbox -->
+        <div> 
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+        <!-- Xbox -->
         <h3 id="XboxJ">Xbox</h3>
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <div></div>
-        <div></div>
-        <div></div>
-         <!-- Nintendo -->
+        <div> 
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+        <!-- Nintendo -->
         <h3 id="NintendoJ">Nintendo</h3>
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+        <div> 
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
 
     </section>
-     <!-- Footer -->
+    <!-- Footer -->
     </section>
     <footer class="footer">
         <div class="Contenedor">
@@ -96,15 +95,15 @@
                         <li>Email: htrrodrigo9@gmail.com</li>
                         <li>Email: santiagolara1242@gmail.com </li>
                     </ul>
-                        <ul>
-                            <li><a href="#">Consolas</a></li>
-                            <li><a href="#">Juegos</a></li>
-                            <li><a href="#">Inicio</a></li>
-                        </ul>
-                    </div>
-                    <a href="">Registrate</a>
+                    <ul>
+                        <li><a href="">Consolas</a></li>
+                        <li><a href="">Juegos</a></li>
+                        <li><a href="">Inicio</a></li>
+                    </ul>
                 </div>
+                <a href="">Registrate</a>
             </div>
+        </div>
     </footer>
 </body>
 
