--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
             <img src="" alt="PlayStation Logo">
             <h2>PlayStation</h2>
             <p>La marca PlayStation, lanzada por Sony en 1994.</p>
-            <a href="">Explorar PlayStation</a>
+            <a href="./Paginas/playstation.html">Explorar PlayStation</a>
         </div>
         <!-- Nintendo -->
         <div class="Tarjeta" id="nintendo">
-            <img src="" alt="Nintendo Logo">
+            <img src="./Paginas/nintendo.html" alt="Nintendo Logo">
             <h2>Nintendo</h2>
             <p>Nintendo es una de las empresas más antiguas en el mundo de los videojuegos. Fundada en 1889,
                 se destaca por sus juegos de plataforma como mario.</p>
@@ -51,7 +51,7 @@
         </div>
         <!-- Xbox -->
         <div class="Tarjeta" id="xbox">
-            <img src="" alt="Xbox Logo">
+            <img src="./Paginas/xbox.html" alt="Xbox Logo">
             <h2>Xbox</h2>
             <p>Microsoft entró en el mundo de los videojuegos con la Xbox original en 2001.</p>
             <a href="">Explorar Xbox</a>
