--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 
 <head>
+    <link rel="stylesheet" href="Styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Integrador</title>
@@ -9,10 +10,10 @@
 
 <body>
     <nav>
-        <ul class="">
+        <ul class="menu">
             <li><a href="">Inicio</a></li>
-            <li><a href="">Consolas</a></li>
-            <li><a href="">Juegos</a></li>
+            <li><a href="#consolas">Consolas</a></li>
+            <li><a href="#Juegos">Juegos</a></li>
             <li><a href="">Contacto</a></li>
         </ul>
     </nav>
@@ -23,17 +24,16 @@
             PlayStation, Nintendo y Xbox. Cada una ha tenido un impacto significativo en la cultura de los videojuegos y
             ha dejado una huella imborrable.</p>
     </section>
+    <!--Carrusel -->
     <section class="Carrusel">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+        <img id="imgCarrusel" src="Imagenes/Playstation carrusel.jpg" alt="Imagen-Carrusel">
         <div class="Botones del Carrusel ">
-            <button id="Anterior" Anterior></button>
-            <button id="Siguiente" Siguiente></button>
+            <button id="Anterior">Anterior</button>
+            <button id="Siguiente">Siguiente</button>
         </div>
     </section>
     <!-- Consolas -->
-    <section class="Consola">
+    <section id="consolas" class ="Consola">
         <!-- PlayStation -->
         <div class="Tarjeta" id="playstation">
             <img src="" alt="PlayStation Logo">
@@ -43,22 +43,22 @@
         </div>
         <!-- Nintendo -->
         <div class="Tarjeta" id="nintendo">
-            <img src="./Paginas/nintendo.html" alt="Nintendo Logo">
+            <img src="" alt="Nintendo Logo">
             <h2>Nintendo</h2>
             <p>Nintendo es una de las empresas más antiguas en el mundo de los videojuegos. Fundada en 1889,
                 se destaca por sus juegos de plataforma como mario.</p>
-            <a href="">Explorar Nintendo</a>
+            <a href="Paginas/nintendo.html">Explorar Nintendo</a>
         </div>
         <!-- Xbox -->
         <div class="Tarjeta" id="xbox">
-            <img src="./Paginas/xbox.html" alt="Xbox Logo">
+            <img src="" alt="Xbox Logo">
             <h2>Xbox</h2>
             <p>Microsoft entró en el mundo de los videojuegos con la Xbox original en 2001.</p>
-            <a href="">Explorar Xbox</a>
+            <a href="Paginas/xbox.html">Explorar Xbox</a>
         </div>
     </section>
     <!-- Juegos-->
-    <section class="Juegos">
+    <section id="Juegos" class="Juegos">
         <h2>Juegos</h2>
         <p>Informacion sobre los juegos exclusivos de cada consola</p>
         <!-- Playstation-->
@@ -84,8 +84,9 @@
         </div>
 
     </section>
+
     <!-- Footer -->
-    </section>
+
     <footer class="footer">
         <div class="Contenedor">
             <div class="menu-footer">
@@ -105,6 +106,7 @@
             </div>
         </div>
     </footer>
+    <script src="Java.js"></script>
 </body>
 
 </html>
