Logos y formulario de contacto

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <nav>
         <ul class="menu">
-            <li><a href="">Inicio</a></li>
+            <li><a id="Inicio" href="#Inicio">Inicio</a></li>
             <li><a href="#consolas">Consolas</a></li>
             <li><a href="#Juegos">Juegos</a></li>
-            <li><a href="">Contacto</a></li>
+            <li><a href="Paginas/Contacto.html">Contacto</a></li>
         </ul>
     </nav>
     <section id="Bienvenida">
@@ -36,24 +36,24 @@
     <section id="consolas" class ="Consola">
         <!-- PlayStation -->
         <div class="Tarjeta" id="playstation">
-            <img src="" alt="PlayStation Logo">
             <h2>PlayStation</h2>
             <p>La marca PlayStation, lanzada por Sony en 1994.</p>
+            <img src="Imagenes/Logo-Play.png" alt="PlayStation Logo">
             <a href="./Paginas/playstation.html">Explorar PlayStation</a>
         </div>
         <!-- Nintendo -->
         <div class="Tarjeta" id="nintendo">
-            <img src="" alt="Nintendo Logo">
             <h2>Nintendo</h2>
             <p>Nintendo es una de las empresas más antiguas en el mundo de los videojuegos. Fundada en 1889,
                 se destaca por sus juegos de plataforma como mario.</p>
+                <img src="Imagenes/Logo-nintendo.png" alt="Nintendo Logo">
             <a href="Paginas/nintendo.html">Explorar Nintendo</a>
         </div>
         <!-- Xbox -->
         <div class="Tarjeta" id="xbox">
-            <img src="" alt="Xbox Logo">
             <h2>Xbox</h2>
             <p>Microsoft entró en el mundo de los videojuegos con la Xbox original en 2001.</p>
+            <img src="Imagenes/Logo-Xbox.png" alt="Xbox Logo">
             <a href="Paginas/xbox.html">Explorar Xbox</a>
         </div>
     </section>
@@ -97,12 +97,12 @@
                         <li>Email: santiagolara1242@gmail.com </li>
                     </ul>
                     <ul>
-                        <li><a href="">Consolas</a></li>
-                        <li><a href="">Juegos</a></li>
-                        <li><a href="">Inicio</a></li>
+                        <li><a href="#consolas">Consolas</a></li>
+                        <li><a href="#Juegos">Juegos</a></li>
+                        <li><a href="#Inicio">Inicio</a></li>
                     </ul>
                 </div>
-                <a href="">Registrate</a>
+                <a href="Paginas/Contacto.html">Registrate</a>
             </div>
         </div>
     </footer>
