--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
 </head>
 
 <body>
-    <nav>
-        <ul class="menu">
-            <li><a id="Inicio" href="#Inicio">Inicio</a></li>
-            <li><a href="#consolas">Consolas</a></li>
-            <li><a href="#Juegos">Juegos</a></li>
-            <li><a href="Paginas/Contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
+    <!-- navbar -->
+    <header>
+        <nav>
+            <ul class="menu">
+                <li><a href="">Inicio</a></li>
+                <li><a href="#consolas">Consolas</a></li>
+                <li><a href="#Juegos">Juegos</a></li>
+                <li><a href="">Contacto</a></li>
+                </ul>
+        </nav>
+    </header>
     <section id="Bienvenida">
         <h1>Bienvenido a la Página de Inicio</h1>
         <p>Las consolas de videojuegos han evolucionado a lo largo de los años, convirtiéndose en una parte fundamental
