--- a/Paginas/Contacto.html
+++ b/Paginas/Contacto.html
@@ -10,17 +10,24 @@
 
 <body>
     <form id="contacto" novalidate>
-        <p><label for="nombre">Nombre Completo:</label></p>
+        <p><label for="nombre">Nombre:</label></p>
         <input type="text" id="nombre" name="nombre">
         <span id="error-nombre" class="error"></span>
 
+        <p><label for="apellido">Apellido:</label></p>
+        <input type="text" id="apellido" name="apellido">
+        <span id="error-apellido" class="error"></span>
+
         <p><label for="correo">Correo Electrónico:</label></p>
-        <input type="email" id="correo" name="correo" >
+        <input type="email" id="correo" name="correo">
         <span id="error-email" class="error"></span>
 
         <p><label for="telefono">Teléfono:</label></p>
         <input type="tel" id="telefono" name="telefono">
-        <span id="error-telefono" class="error"></span><br><br>
+        <span id="error-telefono" class="error"></span>
+
+        <p><label for="mensaje">Mensaje (opcional):</label></p>
+        <textarea id="mensaje" name="mensaje" rows="4"></textarea><br><br>
 
         <button type="submit">Enviar</button>
     </form>
@@ -29,17 +36,25 @@
         document.getElementById('contacto').addEventListener('submit', function (event) {
             event.preventDefault();
             const nombre = document.getElementById('nombre').value.trim();
+            const apellido = document.getElementById('apellido').value.trim();
             const correo = document.getElementById('correo').value.trim();
             const telefono = document.getElementById('telefono').value.trim();
+            const mensaje = document.getElementById('mensaje').value.trim();
 
             document.getElementById('error-nombre').textContent = '';
+            document.getElementById('error-apellido').textContent ='';
             document.getElementById('error-email').textContent = '';
             document.getElementById('error-telefono').textContent = '';
+
             let errores = false;
 
             if (nombre == '' || nombre.length > 50) {
                 errores = true;
-                document.getElementById('error-nombre').textContent = 'Nombre completo es obligatorio y no debe ser mayor a 50 caracteres';
+                document.getElementById('error-nombre').textContent = 'Nombre es obligatorio y no debe ser mayor a 50 caracteres';
+            }
+            if (apellido === '' || apellido.length > 50) {
+                errores = true;
+                document.getElementById('error-apellido').textContent = 'Apellido es obligatorio y no debe ser mayor a 50 caracteres';
             }
             if (!/\S+@\S+\.\S+/.test(correo)) {
                 errores = true;
@@ -54,17 +69,32 @@
                 datosEnviados.classList.add('datos-enviados');
 
                 const NombreValido = document.createElement('p');
-                NombreValido.textContent = `Nombre completo: ${nombre}`;
+                NombreValido.textContent = `Nombre: ${nombre}`;
                 datosEnviados.appendChild(NombreValido);
+
+                const ApellidoValido = document.createElement('p');
+                ApellidoValido.textContent = `Apellido: ${apellido}`;
+                datosEnviados.appendChild(ApellidoValido);
 
                 const CorreoValido = document.createElement('p');
                 CorreoValido.textContent = `Correo Electronico: ${correo}`;
                 datosEnviados.appendChild(CorreoValido);
-
+             
                 const TelefonoValido = document.createElement('p');
                 TelefonoValido.textContent = `Teléfono: ${telefono}`;
                 datosEnviados.appendChild(TelefonoValido);
+
+                if (mensaje) {
+                    const MensajeValido = document.createElement('p');
+                    MensajeValido.textContent = `Mensaje: ${mensaje}`;
+                    datosEnviados.appendChild(MensajeValido);
+                }
                 RegistroValido.appendChild(datosEnviados);
+                document.getElementById('nombre').value = '';
+                document.getElementById('apellido').value = '';
+                document.getElementById('correo').value = '';
+                document.getElementById('telefono').value = '';
+                document.getElementById('mensaje').value = '';
             }
         });
     </script>
