--- a/Paginas/nintendo.html
+++ b/Paginas/nintendo.html
@@ -8,15 +8,22 @@
 </head>
 
 <body>
-    <!-- Navbar -->
-    <nav>
-        <ul>
-            <li><a href="/index.html">Inicio</a></li>
-            <li><a href="/Paginas/playstation.html">PlayStation</a></li>
-            <li><a href="/Paginas/nintendo.html" class="active">Nintendo</a></li>
-            <li><a href="/Paginas/xbox.html">Xbox</a></li>
-        </ul>
-    </nav>
+    <!-- navbar -->
+    <header>
+        <nav class="navbar">
+            <a href="index.html" class="contenedor-logo">
+                <img src="./Imagenes/icono-joystick.png" alt="Logo icono" class="logo">
+                <span class="nombre-pagina">FREAK-GEN</span>
+            </a>
+            <ul class="menu">
+                <li><a href="/index.html">Inicio</a></li>
+                <li><a href="/index.html#consolas">Consolas</a></li>
+                <li><a href="/index.html#juegos">Juegos</a></li>
+                <li><a href="./Contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <section>
         <h1>Consolas de Nintendo</h1>
 
@@ -101,7 +108,33 @@
     </section>
 
     <!-- Footer -->
-    <footer>
+
+    <footer class="footer">
+        <div class="contenedor-footer">
+            <div class="info-contacto">
+                <p class="info-footer">Información de Contacto</p>
+                <ul>
+                    <li>Email: htrrodrigo9@gmail.com</li>
+                    <li>Email: santiagolara1242@gmail.com </li>
+                </ul>
+            </div>
+
+            <div class="info-desarrollo">
+                <p>Todos los derechos reservados 2024 &copy;</p>
+                <p>Desarrollado por:</p>
+                <p>Rodrigo Guerrero</p>
+                <p>Santiago Lara</p>
+            </div>
+
+            <div class="menu-footer">
+                <ul>
+                    <li><a href="/index.html">Inicio</a></li>
+                    <li><a href="/index.html#consolas">Consolas</a></li>
+                    <li><a href="/index.html#juegos">Juegos</a></li>
+                    <li><a href="./Paginas/Contacto.html">Contacto</a></li>
+                </ul>
+            </div>
+        </div>
 
     </footer>
 
