--- a/Paginas/playstation.html
+++ b/Paginas/playstation.html
@@ -8,15 +8,22 @@
 </head>
 
 <body>
-    <!-- Navbar -->
-    <nav>
-        <ul>
-            <li><a href="/index.html">Inicio</a></li>
-            <li><a href="/Paginas/playstation.html" class="active">PlayStation</a></li>
-            <li><a href="/Paginas/nintendo.html">Nintendo</a></li>
-            <li><a href="/Paginas/xbox.html">Xbox</a></li>
-        </ul>
-    </nav>
+    <!-- navbar -->
+    <header>
+        <nav class="navbar">
+            <a href="index.html" class="contenedor-logo">
+                <img src="./Imagenes/icono-joystick.png" alt="Logo icono" class="logo">
+                <span class="nombre-pagina">FREAK-GEN</span>
+            </a>
+            <ul class="menu">
+                <li><a href="/index.html">Inicio</a></li>
+                <li><a href="/index.html#consolas">Consolas</a></li>
+                <li><a href="/index.html#juegos">Juegos</a></li>
+                <li><a href="./Contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <section>
         <h1>Consolas de PlayStation</h1>
 
@@ -31,7 +38,7 @@
                 <li><strong>Memoria Ram:</strong> 2 MB de RAM</li>
                 <li><strong>Memory card</strong>EEPROM de 128 kilobytes </li>
             </ul>
-            <img src="/Imagenes/Playstation 1.png" alt="PlayStation 1">
+            <img src="../Imagenes/Playstation 1.png" alt="PlayStation 1">
         </div>
 
         <div>
@@ -45,7 +52,7 @@
                 <li><strong>Memoria:</strong> 32 MB de RAM</li>
                 <li><strong>Memory card:</strong> 8 MB a 32 MB</li>
             </ul>
-            <img src="/Imagenes/Playstation 2.png" alt="PlayStation 2">
+            <img src="../Imagenes/Playstation 2.png" alt="PlayStation 2">
         </div>
         <div>
             <h2>2004 - Playstation Portable (PSP)</h2>
@@ -58,7 +65,7 @@
                 <li><strong>Memoria:</strong> 32 MB de RAM</li>
                 <li><strong>Pantalla:</strong> LCD de 4.3 pulgadas, 480x272 píxeles</li>
             </ul>
-            <img src="/Imagenes/Playstation Portable.png" alt="Playstation Portable">
+            <img src="../Imagenes/Playstation Portable.png" alt="Playstation Portable">
         </div>
 
         <div>
@@ -71,7 +78,7 @@
                 <li><strong>Memoria:</strong> 256 MB de XDR RAM</li>
                 <li><strong>Almacenamiento:</strong> De 20 a 500 GB</li>
             </ul>
-            <img src="/Imagenes/Playstation 3.png" alt="PlayStation 3">
+            <img src="../Imagenes/Playstation 3.png" alt="PlayStation 3">
         </div>
 
         <div>
@@ -85,7 +92,7 @@
                 <li><strong>Memoria:</strong> 8 GB de GDDR5 RAM</li>
                 <li><strong>Almacenamiento:</strong> 500 GB a 1 TB </li>
             </ul>
-            <img src="/Imagenes/Playstation 4.png" alt="PlayStation 4">
+            <img src="../Imagenes/Playstation 4.png" alt="PlayStation 4">
 
         </div>
 
@@ -100,13 +107,39 @@
                 <li><strong>Memoria:</strong> 16 GB de GDDR6 RAM</li>
                 <li><strong>Almacenamiento:</strong> 825 GB</li>
             </ul>
-            <img src="/Imagenes/Playstation 5.png" alt="PlayStation 5">
+            <img src="../Imagenes/Playstation 5.png" alt="PlayStation 5">
 
         </div>
     </section>
 
     <!-- Footer -->
-    <footer>
+
+    <footer class="footer">
+        <div class="contenedor-footer">
+            <div class="info-contacto">
+                <p class="info-footer">Información de Contacto</p>
+                <ul>
+                    <li>Email: htrrodrigo9@gmail.com</li>
+                    <li>Email: santiagolara1242@gmail.com </li>
+                </ul>
+            </div>
+
+            <div class="info-desarrollo">
+                <p>Todos los derechos reservados 2024 &copy;</p>
+                <p>Desarrollado por:</p>
+                <p>Rodrigo Guerrero</p>
+                <p>Santiago Lara</p>
+            </div>
+
+            <div class="menu-footer">
+                <ul>
+                    <li><a href="/index.html">Inicio</a></li>
+                    <li><a href="/index.html#consolas">Consolas</a></li>
+                    <li><a href="/index.html#juegos">Juegos</a></li>
+                    <li><a href="./Paginas/Contacto.html">Contacto</a></li>
+                </ul>
+            </div>
+        </div>
 
     </footer>
 
