Estilo del formulario

--- a/Paginas/playstation.html
+++ b/Paginas/playstation.html
@@ -2,17 +2,18 @@
 <html lang="es">
 
 <head>
+    <link rel="stylesheet" href="/Styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PlayStation </title>
 </head>
 
-<body>
+<body class="Play">
     <!-- navbar -->
-    <header>
+    <header >
         <nav class="navbar">
             <a href="index.html" class="contenedor-logo">
-                <img src="./Imagenes/icono-joystick.png" alt="Logo icono" class="logo">
+                <img src="/Imagenes/icono-joystick.png" alt="Logo icono" class="logo">
                 <span class="nombre-pagina">FREAK-GEN</span>
             </a>
             <ul class="menu">
