--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul class="menu">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="#consolas">Consolas</a></li>
-                <li><a href="#Juegos">Juegos</a></li>
+                <li><a href="#juegos">Juegos</a></li>
                 <li><a href="./Paginas/Contacto.html">Contacto</a></li>
             </ul>
         </nav>
@@ -199,7 +199,7 @@
                 <ul>
                     <li><a href="#Inicio">Inicio</a></li>
                     <li><a href="#consolas">Consolas</a></li>
-                    <li><a href="#Juegos">Juegos</a></li>
+                    <li><a href="#juegos">Juegos</a></li>
                     <li><a href="./Paginas/Contacto.html">Contacto</a></li>
                 </ul>
             </div>
